--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>todo app</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="./js/localstorage.js"></script>
 </head>
 <body>
   <div class="wrapper">
