--- a/index.html
+++ b/index.html
@@ -22,13 +22,23 @@
       </div>
     </main>
     <footer>
-      <button id="completionButton" class="button">Completion</button>
+      <div class="buttons">
+        <button type="button" id="checkAllButton" class="button">Check All</button>
+        <button type="button" id="completionButton" class="button">Completion</button>
+      </div>
       <span id="todoCount"></span>
     </footer>
   </div>
   <script src="./js/todo.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', todoListRender);
+
+    const $checkAllButton = document.getElementById('checkAllButton');
+    const $todoListView = document.getElementById('todoListView');
+    
+    $checkAllButton.addEventListener('click', (e) => {
+      $todoListView.childNodes.forEach(el => el.firstChild.click());
+    });
   </script>
 </body>
 </html>
